# ouch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  clippy.toml  install.sh  makeshift_testing.py  release-helper.sh  rust-toolchain.toml  rustfmt.toml  test.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  documentation-improvement.md  feature-request.md  question.md
.github/workflows/: all-tests-slow.yml  build-and-test.yml  build-artifacts-and-run-tests.yml  build.yml  create-draft-release-with-artifacts.yml  draft-release-automatic-trigger.yml  draft-release-manual-trigger.yml  manual-release.yml  manual-trigger-draft-release.yml  pr-workflow.yml
benchmarks/: results.md  run-benchmarks.sh  setup-benchmarks.sh  shell.nix
oof/: Cargo.toml
oof/src/: error.rs  flags.rs  lib.rs  util.rs
scripts/: DRAFT_NEW_RELEASE.md  build-appimage.sh  draft-new-release.py  package-release-assets.sh
src/: accessible.rs  bytes.rs  check.rs  cli.rs  commands.rs  commands.rs.orig  dialogs.rs  error.rs  evaluator.rs  extension.rs  extensions.rs  file.rs  formats.rs  lib.rs  list.rs  macros.rs  main.rs  opts.rs  progress.rs  sandbox.rs  test.rs  utils.rs
src/archive/: ar.rs  bzip3_stub.rs  mod.rs  rar.rs  rar_stub.rs  sevenz.rs  squashfs.rs  tar.rs  zip.rs
src/cli/: args.rs  mod.rs
src/commands/: compress.rs  decompress.rs  list.rs  mod.rs
src/compressors/: bzip.rs  compressor.rs  gzip.rs  lzma.rs  mod.rs  tar.rs  tomemory.rs  zip.rs
src/decompressors/: decompressor.rs  lzma.rs  mod.rs  niffler.rs  tar.rs  to_memory.rs  tomemory.rs  unified.rs  zip.rs
src/listers/: lister.rs  mod.rs  tar.rs  to_memory.rs  zip.rs
src/non_archive/: lz4.rs  mod.rs
src/oof/: error.rs  flags.rs  mod.rs  util.rs
src/sandbox/: landlock.rs  mod.rs
src/utils/: bytes.rs  colors.rs  env.rs  file_visibility.rs  formatting.rs  fs.rs  io.rs  landlock.rs  landlock_support.rs  logger.rs  message.rs  mod.rs  pool.rs  question.rs  question_policy.rs  src_utils_landlock.rs  threads.rs  trie.rs  utf8.rs
tests/: compress_and_decompress.rs  compress_empty_dir.rs  integration.rs  landlock.rs  mime.rs  ui.rs  utils.rs
tests/data/: testfile.rar5.rar
tests/snapshots/: ui__ui_test_decompress_with_unknown_extension_shows_output_path.snap  ui__ui_test_err_compress_missing_extension.snap  ui__ui_test_err_decompress_missing_extension-2.snap  ui__ui_test_err_decompress_missing_extension-3.snap  ui__ui_test_err_decompress_missing_extension.snap  ui__ui_test_err_decompress_missing_extension_with_rar-1.snap  ui__ui_test_err_decompress_missing_extension_with_rar-2.snap  ui__ui_test_err_decompress_missing_extension_with_rar-3.snap  ui__ui_test_err_decompress_missing_extension_without_rar-1.snap  ui__ui_test_err_decompress_missing_extension_without_rar-2.snap  ui__ui_test_err_decompress_missing_extension_without_rar-3.snap  ui__ui_test_err_decompress_output_file_exists.snap  ui__ui_test_err_format_flag-2.snap  ui__ui_test_err_format_flag-3.snap  ui__ui_test_err_format_flag.snap  ui__ui_test_err_format_flag_with_rar-1.snap  ui__ui_test_err_format_flag_with_rar-2.snap  ui__ui_test_err_format_flag_with_rar-3.snap  ui__ui_test_err_format_flag_without_rar-1.snap  ui__ui_test_err_format_flag_without_rar-2.snap  ui__ui_test_err_format_flag_without_rar-3.snap  ui__ui_test_err_missing_files-2.snap  ui__ui_test_err_missing_files-3.snap  ui__ui_test_err_missing_files.snap  ui__ui_test_ok_compress-2.snap  ui__ui_test_ok_compress.snap  ui__ui_test_ok_decompress.snap  ui__ui_test_ok_decompress_multiple_files.snap  ui__ui_test_ok_format_flag-2.snap  ui__ui_test_ok_format_flag.snap  ui__ui_test_ok_format_flag_with_rar-2.snap  ui__ui_test_ok_format_flag_without_rar-1.snap  ui__ui_test_ok_format_flag_without_rar-2.snap  ui__ui_test_usage_help_flag-2.snap  ui__ui_test_usage_help_flag.snap
