[package]
name = "ouch"
version = "0.5.1"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>", "João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ouch-org/ouch"
license = "MIT"
keywords = ["decompression", "compression", "cli"]
categories = ["command-line-utilities", "compression", "encoding"]
description = "A command-line utility for easily compressing and decompressing files and directories."

[dependencies]
atty = "0.2.14"
bstr = { version = "1.10.0", default-features = false, features = ["std"] }
bzip2 = "0.4.4"
clap = { version = "4.5.16", features = ["derive", "env"] }
filetime_creation = "0.2"
flate2 = { version = "1.0.30", default-features = false }
fs-err = "2.11.0"
gzp = { version = "0.11.3", default-features = false, features = ["snappy_default"] }
ignore = "0.4.22"
landlock = "0.4.1"
libc = "0.2.155"
linked-hash-map = "0.5.6"
lz4_flex = "0.11.3"
num_cpus = "1.16.0"
once_cell = "1.19.0"
rayon = "1.10.0"
same-file = "1.0.6"
sevenz-rust = { version = "0.6.1", features = ["compress", "aes256"] }
snap = "1.1.1"
tar = "0.4.41"
tempfile = "3.10.1"
thiserror = "1.0.64"
time = { version = "0.3.36", default-features = false }
unrar = { version = "0.5.6", optional = true }
xz2 = "0.1.7"
zip = { version = "0.6.6", default-features = false, features = ["time", "aes-crypto"] }
zstd = { version = "0.13.2", default-features = false, features = ["zstdmt"]}

[target.'cfg(not(unix))'.dependencies]
is_executable = "1.0.1"

[build-dependencies]
clap = { version = "4.5.16", features = ["derive", "env", "string"] }
clap_complete = "4.5.13"
clap_mangen = "0.2.20"

[dev-dependencies]
assert_cmd = "2.0.14"
infer = "0.16.0"
insta = { version = "1.39.0", features = ["filters"] }
parse-display = "0.9.1"
proptest = "1.5.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std"] }
regex = "1.10.4"
test-strategy = "0.4.0"

[features]
default = ["use_zlib", "use_zstd_thin", "unrar"]
use_zlib = ["flate2/zlib", "gzp/deflate_zlib", "zip/deflate-zlib"]
use_zstd_thin = ["zstd/thin"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
