[package]
name = "ouch"
version = "0.7.1"
authors = [
    "João Marcos <marcospb19@hotmail.com>",
    "Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>",
]
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"
repository = "https://github.com/ouch-org/ouch"
license = "MIT"
keywords = ["decompression", "compression", "cli"]
categories = ["command-line-utilities", "compression", "encoding"]
description = "A command-line utility for easily compressing and decompressing files and directories."

[dependencies]
brotli = "8.0.2"
bstr = { version = "1.12.1", default-features = false, features = ["std"] }
bzip2 = "0.4.4"
bzip3 = { version = "0.12.0", features = ["bundled"], optional = true }
clap = { version = "4.6.1", features = ["derive", "env"] }
file_type_enum = "3.0.1"
filetime_creation = "0.2"
flate2 = { version = "1.1.9", default-features = false }
fs-err = "3.3.0"
gzp = { version = "2.0.2", default-features = true, features = [
    "snappy_default",
] }
ignore = "0.4.25"
indexmap = "2"
is_executable = "1.0.5"
libc = "0.2.186"
lz4_flex = "0.13.0"
lzma-rust2 = "0.16.2"
num_cpus = "1.17.0"
rayon = "1.12.0"
same-file = "1.0.6"
sevenz-rust2 = { version = "0.21.0", features = ["compress", "aes256"] }
snap = "1.1.1"
strum = { version = "0.28.0", features = ["derive"] }
tar = "0.4.45"
tempfile = "3.27.0"
time = { version = "0.3.47", default-features = false }
unrar = { version = "0.5.8", optional = true }
zip = { version = "6", default-features = false, features = [
    "time",
    "aes-crypto",
] }
zstd = { version = "0.13.3", default-features = false, features = ["zstdmt"] }

[dev-dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.1"
glob = "0.3.3"
infer = "0.16.0"
insta = { version = "1.47.2", features = ["filters"] }
itertools = "0.14.0"
memchr = "2.8.0"
parse-display = "0.9.1"
pretty_assertions = "1.4.1"
proptest = "1.11.0"
rand = { version = "0.8.5", default-features = false, features = [
    "small_rng",
    "std",
] }
regex = "1.12.3"
test-strategy = "0.4.5"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive", "env", "string"] }
clap_complete = "4.6.3"
clap_complete_nushell = "4.6.0"
clap_mangen = "0.2.24"

[features]
default = ["unrar", "use_zlib", "use_zstd_thin", "bzip3"]
use_zlib = ["flate2/zlib", "gzp/deflate_zlib", "zip/deflate-flate2-zlib"]
use_zstd_thin = ["zstd/thin"]

# For generating binaries for releases
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# When we need a fast binary that compiles slightly faster `release` (useful for CI)
[profile.fast]
inherits = "release"
lto = false
opt-level = 2
incremental = true
codegen-units = 32
strip = false

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
